<resources>
    <string name="app_name">DevNews</string>
    <string name="user_name">User name</string>
    <string name="post_slug">Post slug</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="user_profile_name">Yura Gudan</string>
    <string name="start_activity_contacts">START ACTIVITY CONTACTS</string>
    <string name="result_activity">result</string>
    <string name="start_activity_for_result">START ACTIVITY FOR RESULT</string>
    <string name="start_new_activity">START NEW ACTIVITY</string>
    <string name="text_result">Text result</string>
    <string name="finish_activity">FINISH ACTIVITY</string>
    <string name="text_for_result">Text for result</string>
    <string name="send_result">SEND RESULT</string>
    <string name="start_activity_with_fragments">START ACTIVITY WITH FRAGMENTS</string>
    <string name="text_btn">generate</string>
    <string name="input_text">input text</string>
    <string name="menu_frg_activity">Activity</string>
    <string name="menu_fragment_button">Fragment button</string>
    <string name="menu_fragment_edit">Fragment edit</string>
    <string name="menu_frg_registration">Registration</string>
    <string name="text_registration">Registration</string>
    <string name="get_started">get started</string>
    <string name="text_password">Password</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="your_logo">Your logo</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="item_authorization">Authorization</string>
    <string name="item_scroll_activity">Scroll Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
