<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true"
    android:background="@color/colorbackgroundCV">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_fn_ll_root">
        <ImageView
            android:id="@+id/item_fn_username_image"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/ic_news_32dp"
            android:tag="image_tag"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/item_fn_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/item_fn_username_image"
            android:layout_alignParentTop="true"
            android:text="@string/user_name"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/item_fn_post_slug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="@dimen/dim_post_slug"
            android:text="@string/post_slug"
            android:textColor="@color/colorGray"
            android:layout_toEndOf="@id/item_fn_username_image"
            android:layout_below="@id/item_fn_username" />
        <ImageView
            android:id="@+id/item_fn_post_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_below="@id/item_fn_post_slug"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_news_32dp"
            android:tag="image_post_tag" />

        <TextView
            android:id="@+id/item_fn_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/title"
            android:textColor="@color/colorBlack"
            android:layout_toEndOf="@id/item_fn_post_image"
            android:layout_below="@id/item_fn_post_slug"/>

        <TextView
            android:id="@+id/item_fn_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/description_post"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textColor="@color/colorGray"
            android:layout_toEndOf="@id/item_fn_post_image"
            android:layout_below="@id/item_fn_post_title"/>

        <TextView
            android:id="@+id/item_fn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_like_24dp"

            android:layout_marginHorizontal="3dp"
            android:layout_toEndOf="@id/item_fn_post_image"
            android:layout_below="@id/item_fn_post_description"/>

        <TextView
            android:id="@+id/item_fn_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_comment_24dp"
            android:layout_toEndOf="@id/item_fn_like"
            android:layout_below="@id/item_fn_post_description"
            android:layout_marginHorizontal="3dp" />

        <TextView
            android:id="@+id/item_fn_time_published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_fn_post_description"
            android:text="2019-07-10T04:07:11Z"
            android:layout_marginHorizontal="3dp"
            android:layout_alignParentEnd="true"
            android:gravity="end"/>
    </RelativeLayout>



</androidx.cardview.widget.CardView>